--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-05-30 14:21:53
-# Total rules: 4305
+# Generated from relevant_rules_wildcard_aware.txt on 2025-05-30 23:20:35
+# Total rules: 4310
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -3038,6 +3038,7 @@
 .mermaid.ximalaya.com
 .messaging-notifications.api.nytimes.com
 .meter-svc.nytimes.com
+.metrics-api.dimensions.ai
 .metrics-cbslocal-com.cdn.ampproject.org
 .metrics-logger.spot.im
 .metrics.accuweather.com
@@ -3046,6 +3047,7 @@
 .metrics.icloud.com
 .metrics.mzstatic.com
 .metrics.npr.org
+.metrics.proquest.com
 .metrics.zacks.com
 .mg.games.sina.com.cn
 .mgtv-bbqn.oss-cn-beijing.aliyuncs.com
@@ -3546,6 +3548,7 @@
 .smetrics.marketing.meethue.com
 .smetrics.npr.org
 .smetrics.onetrust.com
+.smetrics.proquest.com
 .smetrics.samsung.com
 .smetrics.samsung.com.cn
 .smetrics.zacks.com
@@ -3776,6 +3779,7 @@
 .tracking.miui.com
 .tracking.opencandy.com.s3.amazonaws.com
 .tracking.prd.mz.internal.unity3d.com
+.tracking.proquest.com
 .tracking.rus.miui.com
 .tracking.smartbusiness.samsung.com
 .trading.assistant.miui.com
@@ -3915,6 +3919,7 @@
 .wbclick.mobile.sina.cn
 .wbpctips.mobile.sina.cn
 .wcp.taobao.com
+.wdfl.co
 .weather-analytics-events.apple.com
 .web-ivcbrasil-tag.s3.us-west-2.amazonaws.com
 .webcast-ppx.snssdk.com
