--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-05-30 23:20:35
-# Total rules: 4310
+# Generated from relevant_rules_wildcard_aware.txt on 2025-05-31 13:40:30
+# Total rules: 4312
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -2542,7 +2542,9 @@
 .fp.techinasia.com
 .fpa-api.arstechnica.com
 .fpa-cdn.arstechnica.com
+.fpa-cdn.decrypt.co
 .fpa-events.arstechnica.com
+.fpa-events.decrypt.co
 .fpt.microsoft.com
 .free-cdn.oss-cn-shanghai.aliyuncs.com
 .freewheel-mtgx-tv.akamaized.net
