--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-05-31 13:40:30
-# Total rules: 4312
+# Generated from relevant_rules_wildcard_aware.txt on 2025-06-01 10:14:36
+# Total rules: 4353
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -113,6 +113,8 @@
 .ade-rtb.netease.com
 .adebus.oss-cn-shenzhen.aliyuncs.com
 .adevents.msn.com
+.adeventtracker.spotify.com
+.adeventtrackermonitoring.spotify.com
 .adgame.waimai.meituan.com
 .adgeo.163.com
 .adgeo.corp.163.com
@@ -160,6 +162,7 @@
 .ads.95516.com
 .ads.bing.com
 .ads.bloomberg.com
+.ads.coingecko.com
 .ads.eu.msn.com
 .ads.google.com
 .ads.imgur.com
@@ -227,6 +230,8 @@
 .adstextview.qq.com
 .adstore-1252524079.file.myqcloud.com
 .adstore-index-1252524079.file.myqcloud.com
+.adstudio-assets.scdn.co
+.adstudio.spotify.com
 .adsview.qq.com
 .adsview2.qq.com
 .adsyndication.msn.com
@@ -326,6 +331,7 @@
 .analytics.msnbc.msn.com
 .analytics.s3.amazonaws.com
 .analytics.snssdk.com
+.analytics.spotify.com
 .analytics.tiktok.com
 .analytics.twitter.com
 .analytics.uca.cloud.unity3d.com
@@ -568,6 +574,7 @@
 .c.mse.360.cn
 .c.msn.com
 .c.my.msn.com
+.c.newyorker.com
 .c.nl.msn.com
 .c.no.msn.com
 .c.ph.msn.com
@@ -585,6 +592,7 @@
 .c.wired.com
 .c.yes.youku.com
 .c.za.msn.com
+.c1-stats.shopifysvc.com
 .cache.datamart.windows.com
 .caclick.baidu.com
 .cad.youku.com
@@ -626,6 +634,7 @@
 .cir-smart.baidu.com
 .cjhq.baidu.com
 .ckm.iqiyi.com
+.clarity.ms
 .classify-client.services.mozilla.com
 .clc.stackoverflow.com
 .cleaner.baidu.com
@@ -637,6 +646,7 @@
 .click.tz.simba.taobao.com
 .click.uve.mobile.sina.cn
 .click.uve.weibo.com
+.clicktale.net
 .client-api.ele.me
 .client.show.qq.com
 .client.video.ucweb.com
@@ -2434,9 +2444,11 @@
 .e.kuaishou.cn
 .e.kuaishou.com
 .e.qq.com
+.e.shop.app
 .e045f561.b-cdn.net
 .e1.o.lencr.org
 .e20d8e38992b.o3n.io
+.earth.cointelegraph.com
 .easytomessage.com
 .ec2-44-233-143-239.us-west-2.compute.amazonaws.com
 .eclick.baidu.com
@@ -2464,6 +2476,7 @@
 .entrecard.s3.amazonaws.com
 .entry.baidu.com
 .erebor.douban.com
+.error-analytics-sessions-production.shopifysvc.com
 .error-tracking.reddit.com
 .ers.baidu.com
 .essential-apps-analytics.herokuapp.com
@@ -2509,6 +2522,7 @@
 .fcmatch.google.com
 .fcmatch.youtube.com
 .fdfs.xmcdn.com
+.fdt.kraken.com
 .featureassets.org
 .feed-image.baidu.com
 .feed.baidu.com
@@ -2607,6 +2621,8 @@
 .gma.alicdn.com
 .go-mpulse.net
 .go.mmstat.com
+.go.shop.app
+.go.test.shop.app
 .go.webtoons.com
 .google-analytics.com
 .googleadapis.l.google.com
@@ -2656,8 +2672,11 @@
 .hc-ssp.sm.cn
 .hc.baidu.com
 .hdtu.oss-cn-beijing.aliyuncs.com
+.heads-fa.spotify.com
+.health-metrics-api.setapp.com
 .heoads.b-cdn.net
 .hesads.akamaized.net
+.hg-statsd.setapp.com
 .hijack.baidu.com
 .hilton.data.adobedc.net
 .hits.theguardian.com
@@ -2742,6 +2761,7 @@
 .hoplink.ksosoft.com
 .hotchat-im.iqiyi.com
 .hpd.baidu.com
+.hs-scripts.com
 .httpdns-api.aliyuncs.com
 .httpdns-sc.aliyuncs.com
 .httpdns-sdk.n.netease.com
@@ -2840,6 +2860,7 @@
 .img3.126.net
 .imgaliyun.res.mgtv.com
 .imgstat.baidu.com
+.impactradius-event.com
 .improving.duckduckgo.com
 .imtt.qq.com
 .in.applicationinsights.azure.com
@@ -2864,6 +2885,7 @@
 .intlsucus.ucweb.com
 .iob.imgur.com
 .ios-informationplatform.wps.cn
+.ip.42.pl
 .ip.geo.iqiyi.com
 .ip.taobao.com
 .ip.ws.126.net
@@ -2911,6 +2933,7 @@
 .kwurl.ucweb.com
 .l.qq.com
 .l.youku.com
+.labadena.com
 .lb.gtimg.com
 .lc-push.zhihu.com
 .leak.360.cn
@@ -2945,6 +2968,7 @@
 .log.optimizely.com
 .log.sina.cn
 .log.snssdk.com
+.log.spotify.com
 .log.tbs.qq.com
 .log.tpns.gz2.tencent.com
 .log.tpns.tencent.com
@@ -2958,6 +2982,7 @@
 .log1.wtlogin.qq.com
 .log2.cmpassport.com
 .log2.sina.cn
+.log2.spotify.com
 .log3-misc-lf.amemv.com
 .log3-misc-lq.amemv.com
 .log5-misc-lf.amemv.com
@@ -3078,6 +3103,7 @@
 .mistat.xiaomi.com
 .mivideo.g.mi.com
 .mixer.sina.cn
+.mixpanel-proxy.coingecko.com
 .mixpanel.com
 .mj-snowplow-static-js.s3.amazonaws.com
 .mm1.365dmp.com
@@ -3107,6 +3133,7 @@
 .monitor.azure.com
 .monitor.music.qq.com
 .monitor.qq.com
+.monorail-edge.shopifysvc.com
 .mostat.wps.cn
 .mountain.zhidao.baidu.com
 .moupdate10332052.wps.cn
@@ -3128,6 +3155,7 @@
 .mssdk.volces.com
 .mssdk.zijieapi.com
 .mta.qq.com
+.mtga.setapp.com
 .mtj.baidu.com
 .mtrace.qq.com
 .mum.alibabachengdun.com
@@ -3288,17 +3316,21 @@
 .pipe.aria.microsoft.com
 .pix.spot.im
 .pixel-config.reddit.com
+.pixel-static.spotify.com
 .pixel.byspotify.com
 .pixel.condenastdigital.com
 .pixel.facebook.com
 .pixel.ipinfo.io
 .pixel.reddit.com
+.pixel.spotify.com
 .pixel.wp.com
+.pixels.spotify.com
 .pixiu.shangshufang.ksosoft.com
 .pl.cp31.ott.cibntv.net
 .player-telemetry.vimeo.com
 .plbusiness.samsung.com
 .pls.prd.mz.internal.unity3d.com
+.plutonium.cointelegraph.com
 .pmir.3g.qq.com
 .pms.mb.qq.com
 .polaris.zijieapi.com
@@ -3354,6 +3386,7 @@
 .pyk.in-neo.cn
 .qapm.baidu.com
 .qc.arstechnica.com
+.qc.newyorker.com
 .qc.wired.com
 .qchannel01.cn
 .qchannel03.cn
@@ -3445,6 +3478,7 @@
 .s-adashx.ut.uc.cn
 .s.360.cn
 .s.baidu.com
+.s.deepl.com
 .s.img.mix.sina.com.cn
 .s.so.360.cn
 .sa.api.intl.miui.com
@@ -3590,7 +3624,9 @@
 .ssl-google-analytics.l.google.com
 .ssp.qq.com
 .sspapi-prd.samsungrs.com
+.sstats.newyorker.com
 .sstats.wired.com
+.sstats2.newyorker.com
 .ssw.live.com
 .st-fly.b-cdn.net
 .st-offlinegame.vivo.com.cn
@@ -3635,6 +3671,7 @@
 .stats.wordpress.com
 .stats.wp.com
 .stats2.arstechnica.com
+.stats2.newyorker.com
 .statscollector-1.agora.io
 .statsfe1.ws.microsoft.com
 .statsfe2.ws.microsoft.com
@@ -3682,6 +3719,7 @@
 .ta.qq.com
 .tags.voacantonese.com
 .tajs.qq.com
+.tapioni.com
 .target-us.samsung.com
 .target.microsoft.com
 .tartannewzealand.myshopify.com
@@ -3774,6 +3812,7 @@
 .tracking.apac.business.samsung.com
 .tracking.b-cdn.net
 .tracking.bloomberg.com
+.tracking.epicgames.com
 .tracking.eu.miui.com
 .tracking.europe.business.samsung.com
 .tracking.india.miui.com
@@ -3805,6 +3844,7 @@
 .tuijian.baidu.com
 .tuisong.baidu.com
 .tunion-api.m.taobao.com
+.tv-static.scdn.co
 .tyh.taobao.com
 .typekit.net
 .tz.sec.xiaomi.com
@@ -3943,6 +3983,7 @@
 .wn.x.jd.com
 .woocall.sina.com.cn
 .woodpecker.uc.cn
+.worldrealize.com
 .wpsweb-dc.wps.cn
 .wren.condenastdigital.com
 .ws.sj.qq.com
