--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-06-01 10:14:36
-# Total rules: 4353
+# Generated from relevant_rules_wildcard_aware.txt on 2025-06-01 20:24:24
+# Total rules: 4363
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -25,6 +25,8 @@
 .a.market.xiaomi.com
 .a.tanx.com
 .a0.app.xiaomi.com
+.a1.api.bbc.co.uk
+.a1.api.bbc.com
 .a1.itc.cn
 .a8bea9eb5d.com
 .a8clk.macpaw.com
@@ -421,6 +423,7 @@
 .asia-northeast1-affiliate-pr.cloudfunctions.net
 .atanx.alicdn.com
 .atanx2.alicdn.com
+.ati-a1.946d001b783803c1.xhst.bbci.co.uk
 .atm.youku.com
 .atom-log.3.cn
 .auction-ads.wpscdn.cn
@@ -2460,6 +2463,7 @@
 .ecpm.tanx.com
 .edge.adobedc.net
 .edgecast-vod.yimg.com
+.edigitalsurvey.com
 .eduad.baidu.com
 .ef-dongfeng.tanx.com
 .ef.opendsp.tanx.com
@@ -2619,6 +2623,7 @@
 .global-staticplat.cdn.bcebos.com
 .globalservices.conde.digital
 .gma.alicdn.com
+.gn-flagpoles.api.bbci.co.uk
 .go-mpulse.net
 .go.mmstat.com
 .go.shop.app
@@ -3163,6 +3168,7 @@
 .mvideo.xiaomi.com
 .mxpnl.com
 .myaccount.nytimes.com
+.mybbc-analytics.files.bbci.co.uk
 .myes.youku.com
 .myhandshops.myshopify.com
 .mythdev.b-cdn.net
@@ -3404,6 +3410,7 @@
 .qzs.gdtimg.com
 .qzs.qq.com
 .r.3hentai.net
+.r.bbci.co.uk
 .r.mail.163.com
 .r.msn.com
 .r.release.qq.com
@@ -3482,6 +3489,7 @@
 .s.img.mix.sina.com.cn
 .s.so.360.cn
 .sa.api.intl.miui.com
+.sa.bbc.co.uk
 .sa.sina.cn
 .safebrowsing.urlsec.qq.com
 .sail-horizon.com
@@ -3663,6 +3671,7 @@
 .statis.push.netease.com
 .statistic.qzone.qq.com
 .stats.addtoany.com
+.stats.bbc.co.uk
 .stats.miui.com
 .stats.paypal.com
 .stats.shopify.com
@@ -3932,6 +3941,7 @@
 .videopush.baidu.com
 .view.zijieapi.com
 .virus-engine.sec.miui.com
+.visualscience.external.bbc.co.uk
 .vlive.qqvideo.tc.qq.com
 .voduscdn.azureedge.net
 .vpic.video.qq.com
