--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-06-03 09:29:00
-# Total rules: 4442
+# Generated from relevant_rules_wildcard_aware.txt on 2025-06-03 21:43:13
+# Total rules: 4478
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -50,6 +50,7 @@
 .a8bea9eb5d.com
 .a8clk.macpaw.com
 .aan.amazon.com
+.ablink.staging-e.klarna.com
 .abtest-ch.snssdk.com
 .abtest.alibaba.com
 .ac.dun.163.com
@@ -78,6 +79,7 @@
 .ad.dev.360.cn
 .ad.docer.wps.cn
 .ad.eporner.com
+.ad.hpplay.cn
 .ad.imp.joins.com
 .ad.india.xiaomi.com
 .ad.intl.xiaomi.com
@@ -134,10 +136,13 @@
 .adboss.qzone.qq.com
 .adbox.sina.com.cn
 .adbs.ximalaya.com
+.adc.hpplay.cn
+.adcdn.hpplay.cn
 .adconsent.samsungrs.com
 .addata.jd.com
 .ade-rtb.netease.com
 .adebus.oss-cn-shenzhen.aliyuncs.com
+.adeng.hpplay.cn
 .adevents.msn.com
 .adeventtracker.spotify.com
 .adeventtrackermonitoring.spotify.com
@@ -149,9 +154,12 @@
 .adimg.uve.weibo.com
 .adinf.cp11.ott.cibntv.net
 .adinplay-venatus.workers.dev
+.adintl.cn
 .adj.st
 .adjust.com
+.adjust.io
 .adjust.world
+.adks.hpplay.cn
 .adkwai.com
 .adm.baidu.com
 .adm.leju.sina.com.cn
@@ -731,6 +739,7 @@
 .community.fandom.com
 .concert.io
 .concertads-configs.vox-cdn.com
+.conf.hpplay.cn
 .conf.international.baidu.com
 .conf.wifi.360.cn
 .confiant.msn.com
@@ -1627,6 +1636,7 @@
 .d2xxqqn3tj9nf3.cloudfront.net
 .d2y1lr6nqzfgkq.cloudfront.net
 .d2y8ttytgze7qt.cloudfront.net
+.d2yc6hxtq0phup.cloudfront.net
 .d2yeczd6cyyd0z.cloudfront.net
 .d2yh8t8mdj4l9x.cloudfront.net
 .d2yjxa7gi6wm99.cloudfront.net
@@ -2577,6 +2587,7 @@
 .feed-image.baidu.com
 .feed.baidu.com
 .feedback-c.zijieapi.com
+.fengkongcloud.com
 .fexclick.baidu.com
 .ffbbbdc6d3c353211fe2ba39c9f744cd.com
 .ffe390afd658c19dcbf707e0597b846d.de
@@ -2693,8 +2704,10 @@
 .gouwu.qq.com
 .gqjppj.rentcafe.com.cdn.cloudflare.net
 .grand.ele.me
+.gslb.hpplay.cn
 .gslbali.ximalaya.com
 .gsp1.baidu.com
+.gtm-sst.crowdin.com
 .gtm.tipranks.com
 .gtm.wise.com
 .gtmsdd.alicdn.com
@@ -2816,6 +2829,7 @@
 .hmma.baidu.com
 .hoplink.ksosoft.com
 .hotchat-im.iqiyi.com
+.hotupgrade.hpplay.cn
 .hpd.baidu.com
 .hs-scripts.com
 .httpdns-api.aliyuncs.com
@@ -2848,6 +2862,7 @@
 .hz.youku.com
 .i.paypal.com
 .i.posthog.com
+.i.skimresources.com
 .i.viafoura.co
 .i1.services.social.microsoft.com
 .iacc.qq.com
@@ -2890,6 +2905,7 @@
 .im-x.jd.com
 .image-ad.sm.cn
 .image.box.xiaomi.com
+.image.hpplay.cn
 .image.zzd.sm.cn
 .imageplus.baidu.com
 .images.b2bindia.samsung.com
@@ -2905,6 +2921,7 @@
 .images.sohu.com
 .images.ssbusiness.samsung.com
 .imagev2.tx.xmcdn.com
+.imdns.hpplay.cn
 .img-dsp.oss-cn-beijing.aliyuncs.com
 .img-x.jd.com
 .img.alibaba.com
@@ -3026,6 +3043,7 @@
 .log.mix.sina.com.cn
 .log.mmstat.com
 .log.music.baidu.com
+.log.nuomi.com
 .log.optimizely.com
 .log.sina.cn
 .log.snssdk.com
@@ -3104,6 +3122,7 @@
 .masdk.3g.qq.com
 .masdkv6.3g.qq.com
 .master-shopify-tracker.s3.amazonaws.com
+.match.p4p.1688.com
 .matomo.openstreetmap.org
 .matwbp.iask.sina.com.cn
 .mazu.3g.qq.com
@@ -3282,6 +3301,7 @@
 .onespot-tracking.herokuapp.com
 .onethingpcs.com
 .online-metrix.net
+.onthe.io
 .ope.tanx.com
 .opehs.tanx.com
 .open-hive-server-1.pp.ua
@@ -3309,6 +3329,7 @@
 .p.controld.com
 .p.hentaiforce.net
 .p.imgur.com
+.p.skimresources.com
 .p.store.qq.com
 .p.tanx.com
 .p.twitter.com
@@ -3370,6 +3391,7 @@
 .pglstatp-toutiao.com
 .phs.tanx.com
 .pimlog.baidu.com
+.pin.hpplay.cn
 .pindao.huoban.taobao.com
 .pingfore.qq.com
 .pinghot.qq.com
@@ -3479,6 +3501,7 @@
 .r.mail.163.com
 .r.msn.com
 .r.release.qq.com
+.r.skimresources.com
 .r1.visualwebsiteoptimizer.com
 .r2.visualwebsiteoptimizer.com
 .r3.visualwebsiteoptimizer.com
@@ -3540,7 +3563,9 @@
 .romeccs.microsoft.com
 .routertips.video.qq.com
 .rp.baidu.com
+.rp.hpplay.cn
 .rplog.baidu.com
+.rps.hpplay.cn
 .rqd.qq.com
 .rs.sinajs.cn
 .rs1.qq.com
@@ -3553,10 +3578,12 @@
 .s.baidu.com
 .s.deepl.com
 .s.img.mix.sina.com.cn
+.s.skimresources.com
 .s.so.360.cn
 .sa.api.intl.miui.com
 .sa.bbc.co.uk
 .sa.sina.cn
+.saas.hpplay.cn
 .safebrowsing.urlsec.qq.com
 .sail-horizon.com
 .sam.msn.com
@@ -3590,6 +3617,7 @@
 .sdk.m.youku.com
 .sdkapp.mobile.sina.cn
 .sdkapp.uve.weibo.com
+.sdkauth.hpplay.cn
 .sdkclick.mobile.sina.cn
 .sdkconfig.video.qq.com
 .sdkconfig.xiaomi.com
@@ -3646,6 +3674,7 @@
 .site24x7rum.eu
 .sjarvis.taobao.com
 .skdisplay.jd.com
+.sl.hpplay.cn
 .slb-p2p.vcloud.ks-live.com
 .slog.sina.cn
 .slog.sina.com.cn
@@ -3710,6 +3739,7 @@
 .staging.ai.api.xiaomi.com
 .star-seo.oss-ap-northeast-1.aliyuncs.com
 .starkgame.zijieapi.com
+.stat.1688.com
 .stat.alibaba.com
 .stat.m.360.cn
 .stat.m.jd.com
@@ -3787,6 +3817,7 @@
 .t.e.x.com
 .t.imgur.com
 .t.sj.qq.com
+.t.skimresources.com
 .t.spot.im
 .t.uc.cn
 .t.zhipin.com
@@ -3860,6 +3891,7 @@
 .togame.iqiyi.com
 .toggle.qq.com
 .token.safebrowsing.apple
+.tongdun.net
 .tongji.baidu.com
 .toolbar.baidu.com
 .toolbar.msn.com
@@ -3888,6 +3920,7 @@
 .tracking.agora.io
 .tracking.americas.business.samsung.com
 .tracking.apac.business.samsung.com
+.tracking.aws.judge.me
 .tracking.b-cdn.net
 .tracking.bloomberg.com
 .tracking.epicgames.com
@@ -3923,6 +3956,7 @@
 .tuisong.baidu.com
 .tunion-api.m.taobao.com
 .tv-static.scdn.co
+.tvapp.hpplay.cn
 .tyh.taobao.com
 .typekit.net
 .tz.sec.xiaomi.com
@@ -4012,6 +4046,8 @@
 .videoplayerhub.com
 .videopush.baidu.com
 .view.zijieapi.com
+.vipauth.hpplay.cn
+.vipgslb.hpplay.cn
 .virus-engine.sec.miui.com
 .visualscience.external.bbc.co.uk
 .vlive.qqvideo.tc.qq.com
