--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-06-03 21:43:13
-# Total rules: 4478
+# Generated from relevant_rules_wildcard_aware.txt on 2025-06-04 09:37:29
+# Total rules: 4481
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -1447,6 +1447,7 @@
 .d2hdyssxn6lpj2.cloudfront.net
 .d2ho1n52p59mwv.cloudfront.net
 .d2hvwfg7vv4mhf.cloudfront.net
+.d2i34c80a0ftze.cloudfront.net
 .d2i4wzwe8j1np9.cloudfront.net
 .d2i55s0cnk529c.cloudfront.net
 .d2ibu2ug0mt5qp.cloudfront.net
@@ -1499,6 +1500,7 @@
 .d2lxammzjarx1n.cloudfront.net
 .d2lxqodqbpy7c2.cloudfront.net
 .d2lxztepvo7ma1.cloudfront.net
+.d2lyx5ly60ksu3.cloudfront.net
 .d2lzu2a5ishr7o.cloudfront.net
 .d2m6mzhbzc72b5.cloudfront.net
 .d2m785nxw66jui.cloudfront.net
@@ -2977,6 +2979,7 @@
 .iyes.youku.com
 .j.br.baidu.com
 .j.wit.qq.com
+.j0v36abmdj.execute-api.us-east-1.amazonaws.com
 .jads.co
 .janapi.jd.com
 .jiagu.360.cn
