--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-06-04 21:12:41
-# Total rules: 4480
+# Generated from relevant_rules_wildcard_aware.txt on 2025-06-05 10:11:56
+# Total rules: 4543
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -7,6 +7,8 @@
 .1097834592.rsc.cdn77.org
 .1187531871.rsc.cdn77.org
 .1208344341.rsc.cdn77.org
+.123.sogou.com
+.123.sogoucdn.com
 .12551-1311572332.cos.ap-shanghai.myqcloud.com
 .1437953666.rsc.cdn77.org
 .1480876790.rsc.cdn77.org
@@ -237,6 +239,7 @@
 .adse.wsa.ximalaya.com
 .adse.ximalaya.com
 .adsebs.ximalaya.com
+.adsence.sogou.com
 .adsense.html5.qq.com
 .adsensecustomsearchads.com
 .adserver-2084671375.us-east-1.elb.amazonaws.com
@@ -338,6 +341,7 @@
 .ambientdsp.cachefly.net
 .amdc.alipay.com
 .amdcopen.m.taobao.com
+.amfi.gou.sogou.com
 .amplitude.com
 .amptrack-dailymail-co-uk.cdn.ampproject.org
 .ams-pageview-public.s3.amazonaws.com
@@ -388,6 +392,7 @@
 .anti-adblock.herokuapp.com
 .antivirus.baidu.com
 .anymind360-com.cdn.ampproject.org
+.anythinktech.com
 .ao-freegeoip.herokuapp.com
 .aod-image-material.cdn.bcebos.com
 .aod-video-antusheng.cdn.bcebos.com
@@ -496,6 +501,7 @@
 .bao.tjjt360.com
 .bar.baidu.com
 .bat.bing.com
+.bazinga.mse.sogou.com
 .bbangads.b-cdn.net
 .bd.hd.sohu.com
 .bdplus.baidu.com
@@ -574,6 +580,7 @@
 .boscdn.bpc.baidu.com
 .boxai-structured-data-slice-formal-1258344701.cos.ap-guangzhou.myqcloud.com
 .bradcroninnapo82.myshopify.com
+.brand.sogou.com
 .browser-intake-datadoghq.com
 .browser.miui.com
 .browserkernel.baidu.com
@@ -666,6 +673,7 @@
 .cdp.cloud.unity3d.com
 .cert-test.sandbox.google.com
 .ceshi127722.obs.cn-north-4.myhuaweicloud.com
+.cfg.mse.sogou.com
 .cgi.connect.qq.com
 .cgicol.amap.com
 .champagne.futurecdn.net
@@ -678,6 +686,7 @@
 .choice.microsoft.com
 .cir-smart.baidu.com
 .cjhq.baidu.com
+.cjroq.bealge.sogou.com
 .ckm.iqiyi.com
 .clarity.ms
 .classify-client.services.mozilla.com
@@ -744,6 +753,7 @@
 .confiant.msn.com
 .config-api.internet.apps.samsung.com
 .config.ab.qq.com
+.config.push.sogou.com
 .config.uca.cloud.unity3d.com
 .connext-cdn.azureedge.net
 .consent.dropbox.com
@@ -767,6 +777,7 @@
 .counter.joins.com
 .counter.ksosoft.com
 .counter.sina.com.cn
+.cpc.sogou.com
 .cpc.sohu.com
 .cpoml.iask.sina.com.cn
 .cpro.baidu.com
@@ -2112,6 +2123,7 @@
 .data.em2.cloudflare.com
 .data.fastlane-email.paypal.com
 .data.glbdns2.microsoft.com
+.data.haoma.sogou.com
 .data.intl.miui.com
 .data.mgtv.com
 .data.microsoft.com
@@ -2261,6 +2273,7 @@
 .dl.g.youku.com
 .dl.kjava.sina.cn
 .dl.ops.baidu.com
+.dl.wan.sogoucdn.com
 .dl1d2m8ri9v3j.cloudfront.net
 .dl1sw.baidu.com
 .dl2.bav.baidu.com
@@ -2354,6 +2367,7 @@
 .download.bav.baidu.com
 .download.sd.baidu.com
 .download.sj.qq.com
+.download.zhushou.sogou.com
 .downloadshi.b-cdn.net
 .dp.im.weibo.cn
 .dp1fzft1fdb84.cloudfront.net
@@ -2374,6 +2388,7 @@
 .dqd5t8xfxmhi7.cloudfront.net
 .dqif5bl25s0bf.cloudfront.net
 .dqv45r33u0ltv.cloudfront.net
+.dr.soso.com
 .dr3k6qonw2kee.cloudfront.net
 .dr6su5ow3i7eo.cloudfront.net
 .dr6vcclmzwk74.cloudfront.net
@@ -2534,6 +2549,7 @@
 .enchantestore.myshopify.com
 .entrecard.s3.amazonaws.com
 .entry.baidu.com
+.epro.sogou.com
 .epro.sohu.com
 .erebor.douban.com
 .error-analytics-sessions-production.shopifysvc.com
@@ -2574,6 +2590,7 @@
 .fa.163.com
 .fa.corp.163.com
 .facai383.oss-cn-guangzhou.aliyuncs.com
+.fair.sogou.com
 .familygiftlove.myshopify.com
 .fav.simba.taobao.com
 .fc-feed.cdn.bcebos.com
@@ -2594,6 +2611,7 @@
 .ffe390afd658c19dcbf707e0597b846d.de
 .filament-stats.herokuapp.com
 .file.daihuo.qq.com
+.files2.sogou.com
 .fingerprinter-production.herokuapp.com
 .finnews7.wordpress.com
 .firebase.googleapis.com
@@ -2643,6 +2661,7 @@
 .g2insights-cdn.azureedge.net
 .ga.clearbit.com
 .gak.webtoons.com
+.galaxy.sogoucdn.com
 .game-video.cdn.bcebos.com
 .game.html5.qq.com
 .game.iqiyi.com
@@ -2691,6 +2710,7 @@
 .go.sohu.com
 .go.test.shop.app
 .go.webtoons.com
+.golden1.sogou.com
 .golden1.sohu.com
 .google-analytics.com
 .googleadapis.l.google.com
@@ -2700,6 +2720,7 @@
 .googletagmanager.com
 .googletagservices.com
 .goshare-fleet-ads.s3.ap-southeast-1.amazonaws.com
+.goto.sogou.com
 .gou.wps.cn
 .goutong.baidu.com
 .gouwu.qq.com
@@ -2833,6 +2854,7 @@
 .hotupgrade.hpplay.cn
 .hpd.baidu.com
 .hs-scripts.com
+.ht.www.sogou.com
 .httpdns-api.aliyuncs.com
 .httpdns-sc.aliyuncs.com
 .httpdns-sdk.n.netease.com
@@ -2855,6 +2877,7 @@
 .huodong.mi.com
 .huodong.pl.youku.com
 .huodong.vip.youku.com
+.husky.sogou.com
 .hwstats.unity3d.com
 .hybrid.miniapp.taobao.com
 .hydra.alibaba.com
@@ -2905,8 +2928,10 @@
 .ilyonanalytics.herokuapp.com
 .im-x.jd.com
 .image-ad.sm.cn
+.image.9game.cn
 .image.box.xiaomi.com
 .image.hpplay.cn
+.image.p4p.sogou.com
 .image.zzd.sm.cn
 .imageplus.baidu.com
 .images.b2bindia.samsung.com
@@ -2944,6 +2969,7 @@
 .indianetouristvisacoin.wordpress.com
 .inf.miui.com
 .infinityid.condenastdigital.com
+.info-fsi.stanford.edu
 .info.3g.qq.com
 .info.analysis.kp.sec.miui.com
 .info.sec.miui.com
@@ -2955,6 +2981,8 @@
 .int.dpool.sina.com.cn
 .intake-analytics.wikimedia.org
 .intake-logging.wikimedia.org
+.inte.sogou.com
+.inte.sogoucdn.com
 .inte.sohu.com
 .interest.mix.sina.com.cn
 .intergient.com
@@ -2974,6 +3002,7 @@
 .ivy.pconline.com.cn
 .iwallet-1258175138.file.myqcloud.com
 .iwan-s.video.qq.com
+.iwan.sogou.com
 .iwanad.baidu.com
 .iyes.youku.com
 .j.br.baidu.com
@@ -3000,6 +3029,7 @@
 .jsqmt.qq.com
 .juggler.services.disqus.com
 .jun01.oss-cn-beijing.aliyuncs.com
+.jzclick.soso.com
 .jzt.jd.com
 .kcqoej.roborock.com
 .kde.qq.com
@@ -3022,6 +3052,7 @@
 .lgtvcommon.com
 .lianmeng.360.cn
 .libfre.obs.cn-east-3.myhuaweicloud.com
+.link.medium.com
 .linkeye.ximalaya.com
 .links.services.disqus.com
 .live.126.net
@@ -3096,6 +3127,8 @@
 .ltassrv.com.s3.amazonaws.com
 .ltsbsy.qq.com
 .ltsydzd.qq.com
+.lu.sogou.com
+.lu.sogoucdn.com
 .luckycat-power.snssdk.com
 .luimg.baidu.com
 .lupic.cdn.bcebos.com
@@ -3343,6 +3376,7 @@
 .p2pupgrade.gamedl.qq.com
 .p3-tt.byteimg.com
 .p3p.mmstat.com
+.p3p.sogou.com
 .p4p.sina.com.cn
 .p4psearch.china.alibaba.com
 .p6-ad-sign.byteimg.com
@@ -3370,8 +3404,11 @@
 .passport-log.youku.com
 .pay.mobile.sina.cn
 .pb.hd.sohu.com
+.pb.i.sogou.com
+.pb.sogou.com
 .pb3.pstatp.com
 .pbc.wsj.com
+.pbd.sogou.com
 .pc-mon.zijieapi.com
 .pc.uf.ksosoft.com
 .pcapp-data-collect.youku.com
@@ -3383,6 +3420,7 @@
 .pcvideoaliyun.titan.mgtv.com
 .pcvideoyd.titan.mgtv.com
 .pcweb.v1.mgtv.com
+.pd.sogou.com
 .pdc.micloud.xiaomi.net
 .perf-events.cloud.unity3d.com
 .permutive.com
@@ -3392,10 +3430,14 @@
 .pgdt.gtimg.com
 .pglstatp-toutiao.com
 .phs.tanx.com
+.pics.taobaocdn.com
 .pimlog.baidu.com
 .pin.hpplay.cn
 .pindao.huoban.taobao.com
+.ping.acc.sogou.com
+.pingback.sogou.com
 .pingfore.qq.com
+.pingfore.soso.com
 .pinghot.qq.com
 .pingjs.qq.com
 .pingma.qq.com
@@ -3418,6 +3460,7 @@
 .player-telemetry.vimeo.com
 .plbusiness.samsung.com
 .pls.prd.mz.internal.unity3d.com
+.pluto.sogou.com
 .plutonium.cointelegraph.com
 .pmir.3g.qq.com
 .pms.mb.qq.com
@@ -3444,6 +3487,7 @@
 .proxy.advp.apple.com
 .proxy.sec.miui.com
 .ps.map.baidu.com
+.psfq.gou.sogou.com
 .psh-static.b-cdn.net
 .ptelastaxo.com
 .puata.info
@@ -3456,6 +3500,7 @@
 .pubmatic.com
 .puds.test.uae.uc.cn
 .puds.ucweb.com
+.pull.push.sogou.com
 .puma-api.iqiyi.com
 .puma.api.iqiyi.com
 .pups.baidu.com
@@ -3469,6 +3514,7 @@
 .push.yuedu.163.com
 .pushservice.10010.com
 .pv.hd.sohu.com
+.pv.sogou.com
 .pv.sohu.com
 .pvstat.html5.qq.com
 .px-intl.ucweb.com
@@ -3482,6 +3528,7 @@
 .qchannel01.cn
 .qchannel03.cn
 .qgumjp.joins.com
+.qhl.bealge.sogou.com
 .qianclick.baidu.com
 .qos.video.yimg.com
 .qpb.sohu.com
@@ -3518,10 +3565,12 @@
 .raw.vidyard.com
 .rcgi.video.qq.com
 .rcm-images.amazon.com
+.rd.e.sogou.com
 .rdstat.tanx.com
 .re.m.taobao.com
 .re.taobao.com
 .reachmax.cn
+.read.medium.com
 .recmd.html5.qq.com
 .recs-api.conde.digital
 .redir.metaservices.microsoft.com
@@ -3559,6 +3608,7 @@
 .rm.sina.com.cn
 .rmads.eu.msn.com
 .rmads.msn.com
+.rmoeu.mercury.sogou.com
 .rmonitor.qq.com
 .robalmeister.workers.dev
 .roi.soulapp.cn
@@ -3642,6 +3692,7 @@
 .security-lq.snssdk.com
 .seedapp-creative.s3.amazonaws.com
 .segment.io
+.send.preply.com
 .sentry.d.xiaomi.net
 .sentry.music.163.com
 .server.iad.liveperson.net
@@ -3661,6 +3712,7 @@
 .shenghuo.xiaomi.com
 .shooter.m.jd.com
 .shouji.360.cn
+.shouji.sogou.com
 .show-msgch.qq.com
 .show.look.360.cn
 .showwxml.qq.com
@@ -3792,6 +3844,7 @@
 .store.tv.api.3g.youku.com
 .store.xl.api.3g.youku.com
 .strip.alicdn.com
+.strip.taobaocdn.com
 .stsdk.vivo.com.cn
 .su.bdimg.com
 .su.bdstatic.com
@@ -3803,6 +3856,7 @@
 .survey.china.alibaba.com
 .suvset.sohu.com
 .svibeacon.onezapp.com
+.sw.mobile.sogou.com
 .swa.gtimg.com
 .sworkitads.herokuapp.com
 .swwwxww.oss-cn-hangzhou.aliyuncs.com
@@ -3860,6 +3914,8 @@
 .test.ott.youku.com
 .textlink.simba.taobao.com
 .tf.360.cn
+.theta.sogou.com
+.theta.sogoucdn.com
 .thind-gke-euw.prd.data.corp.unity3d.com
 .tianqin.qq.com
 .tianwenca.com
@@ -3897,6 +3953,7 @@
 .tongji.baidu.com
 .toolbar.baidu.com
 .toolbar.msn.com
+.toolbar.soso.com
 .tools.3g.qq.com
 .top.h.qhimg.com
 .toruk.tanx.com
@@ -4000,6 +4057,7 @@
 .union.gdtimg.com
 .union.jd.com
 .union.mi.com
+.union.sogou.com
 .union.ucweb.com
 .unionimage.baidu.com
 .unitacs.m.taobao.com
@@ -4012,6 +4070,7 @@
 .updatecenter.qq.com
 .uplog.inews.qq.com
 .uranus.jd.com
+.uranus.sogou.com
 .uranus.sohu.com
 .urls.api.twitter.com
 .us-central1-markuphero.cloudfunctions.net
@@ -4068,9 +4127,11 @@
 .w3-reporting.reddit.com
 .wa.gtimg.com
 .wan.360.cn
+.wan.sogou.com
 .wan.sohu.com
 .wan.youku.com
 .wangmeng.baidu.com
+.wangmeng.sogou.com
 .wanproxy.127.net
 .wap3.ucweb.com
 .wapwbclick.mobile.sina.cn
@@ -4086,6 +4147,7 @@
 .wdfl.co
 .weather-analytics-events.apple.com
 .web-ivcbrasil-tag.s3.us-west-2.amazonaws.com
+.web.sogou.com
 .webcast-ppx.snssdk.com
 .website-security.geotrust.com
 .website-security.rapidssl.com
@@ -4107,6 +4169,7 @@
 .woocall.sina.com.cn
 .woodpecker.uc.cn
 .worldrealize.com
+.worldwide.sogou.com
 .wpsweb-dc.wps.cn
 .wren.condenastdigital.com
 .ws.sj.qq.com
