--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-06-05 10:11:56
-# Total rules: 4543
+# Generated from relevant_rules_wildcard_aware.txt on 2025-06-05 21:49:03
+# Total rules: 4552
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -203,6 +203,7 @@
 .ads.eu.msn.com
 .ads.google.com
 .ads.imgur.com
+.ads.linkedin.com
 .ads.mozilla.org
 .ads.msn.com
 .ads.music.126.net
@@ -318,6 +319,7 @@
 .agent.ap1.datadoghq.com
 .agent.datadoghq.com
 .agoodm.m.taobao.com
+.ahdohpiechei.com
 .ahoy-internal-ads-hv.b-cdn.net
 .ai.m.taobao.com
 .ai.taobao.com
@@ -370,6 +372,7 @@
 .analytics.meituan.net
 .analytics.msn.com
 .analytics.msnbc.msn.com
+.analytics.pointdrive.linkedin.com
 .analytics.s3.amazonaws.com
 .analytics.snssdk.com
 .analytics.spotify.com
@@ -2552,6 +2555,7 @@
 .epro.sogou.com
 .epro.sohu.com
 .erebor.douban.com
+.erer.homeborn.cn
 .error-analytics-sessions-production.shopifysvc.com
 .error-tracking.reddit.com
 .ers.baidu.com
@@ -3115,6 +3119,7 @@
 .logsdk.qq.com
 .logssug.ucweb.com
 .logtake.weidian.com
+.logx-experimentation.iherb.com
 .logx.optimizely.com
 .look-like-star.myshopify.com
 .look.163.com
@@ -3478,6 +3483,7 @@
 .presentationtracking.netflix.com
 .preview.msn.com
 .privacy-center.org
+.privacy-policy.truste.com
 .prodregistryv2.org
 .projecta-common-1258344701.file.myqcloud.com
 .projectagora.s3.amazonaws.com
@@ -3976,6 +3982,7 @@
 .tracker.dcdn.baidu.com
 .tracker.didistatic.com
 .tracker.downdetector.com
+.trackerapi.truste.com
 .tracking.agora.io
 .tracking.americas.business.samsung.com
 .tracking.apac.business.samsung.com
@@ -4094,6 +4101,7 @@
 .vcs.zijieapi.com
 .vd.contents.prod.eu.s3.amazonaws.com
 .vd.emp.prd.s3.amazonaws.com
+.vegslb.com
 .vhotwsh.video.qq.com
 .vibeaconstr.onezapp.com
 .video-ad.sm.cn
@@ -4113,6 +4121,7 @@
 .visualscience.external.bbc.co.uk
 .vlive.qqvideo.tc.qq.com
 .voduscdn.azureedge.net
+.volcsiriusbd.com
 .vpic.video.qq.com
 .vs19.gzcu.u3.ucweb.com
 .vs2.gzcu.u3.ucweb.com
