--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,4 +1,4 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-06-05 21:49:03
+# Generated from relevant_rules_wildcard_aware.txt on 2025-06-06 09:42:09
 # Total rules: 4552
 
 .0a0d-d3l1vr.b-cdn.net
@@ -2555,7 +2555,6 @@
 .epro.sogou.com
 .epro.sohu.com
 .erebor.douban.com
-.erer.homeborn.cn
 .error-analytics-sessions-production.shopifysvc.com
 .error-tracking.reddit.com
 .ers.baidu.com
@@ -2853,6 +2852,7 @@
 .hk2wns1b.wns.windows.com
 .hm.baidu.com
 .hmma.baidu.com
+.homeborn.cn
 .hoplink.ksosoft.com
 .hotchat-im.iqiyi.com
 .hotupgrade.hpplay.cn
