--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-06-06 09:42:09
-# Total rules: 4552
+# Generated from relevant_rules_wildcard_aware.txt on 2025-06-06 22:42:40
+# Total rules: 4578
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -334,6 +334,7 @@
 .alexa-sitestats.s3.amazonaws.com
 .alimama.alicdn.com
 .alime-pic.oss-cn-hangzhou.aliyuncs.com
+.alindflepkaty14.pages.dev
 .alissl.ucdl.pp.uc.cn
 .alitui.weibo.com
 .aliyaoberbrunnergreg21.myshopify.com
@@ -479,6 +480,7 @@
 .aurora-d3.herokuapp.com
 .auth.be.sec.miui.com
 .authbe.sec.intl.miui.com
+.auto-deploy.pages.dev
 .avast.sec.miui.com
 .avlyun.sec.intl.miui.com
 .avlyun.sec.miui.com
@@ -647,6 +649,7 @@
 .c.wired.com
 .c.yes.youku.com
 .c.za.msn.com
+.c0nt4ct-me.pages.dev
 .c1-stats.shopifysvc.com
 .cache.datamart.windows.com
 .caclick.baidu.com
@@ -656,6 +659,7 @@
 .cams.xvideos.com
 .capture.condenastdigital.com
 .carbonads.com
+.carpe.pages.dev
 .catalog.video.msn.com
 .cb.baidu.com
 .cbjs.baidu.com
@@ -673,6 +677,7 @@
 .cdn.onesignal.com
 .cdn.tanx.com
 .cdn.ynuf.aliapp.org
+.cdnweb3.pages.dev
 .cdp.cloud.unity3d.com
 .cert-test.sandbox.google.com
 .ceshi127722.obs.cn-north-4.myhuaweicloud.com
@@ -727,6 +732,8 @@
 .cmap.alibaba.com
 .cmc.tanx.com
 .cmop.mgtv.com
+.cmp.springer.com
+.cmp.springernature.com
 .cms.opendsp.tanx.com
 .cms.tanx.com
 .cms.ucweb.com
@@ -779,6 +786,7 @@
 .count5.pconline.com.cn
 .counter.joins.com
 .counter.ksosoft.com
+.counter.people.cn
 .counter.sina.com.cn
 .cpc.sogou.com
 .cpc.sohu.com
@@ -2134,6 +2142,7 @@
 .data.news.paypal.com
 .data.sec.intl.miui.com
 .data.service.paypal.com
+.datadog.pool.ntp.org
 .dataflow.biliapi.com
 .datax.baidu.com
 .date2night.b-cdn.net
@@ -2249,6 +2258,7 @@
 .dita6jhhqwoiz.cloudfront.net
 .divekcl7q9fxi.cloudfront.net
 .diz4z73aymwyp.cloudfront.net
+.diziwatchpreroll.pages.dev
 .dj4odketdva9s.cloudfront.net
 .djm080u34wfc5.cloudfront.net
 .djnaivalj34ub.cloudfront.net
@@ -2633,6 +2643,7 @@
 .fm.qzone.qq.com
 .fodder.qq.com
 .fodder.tc.qq.com
+.folkrbvi.pages.dev
 .fonts.googleapis.com
 .fourier.alibaba.com
 .fourier.taobao.com
@@ -2646,6 +2657,7 @@
 .fpb.sohu.com
 .fpt.microsoft.com
 .free-cdn.oss-cn-shanghai.aliyuncs.com
+.freebitcoin.pages.dev
 .freewheel-mtgx-tv.akamaized.net
 .fs-client-logger.herokuapp.com
 .fs-uc-nearme-com-cn.oss-cn-hangzhou.aliyuncs.com
@@ -2886,6 +2898,7 @@
 .hybrid.miniapp.taobao.com
 .hydra.alibaba.com
 .hydro-ma-proxy.akamaized.net
+.hyndtren25.pages.dev
 .hz.mmstat.com
 .hz.youku.com
 .i.paypal.com
@@ -2988,6 +3001,7 @@
 .inte.sogou.com
 .inte.sogoucdn.com
 .inte.sohu.com
+.intensedebate.com
 .interest.mix.sina.com.cn
 .intergient.com
 .internal-e.posthog.com
@@ -3029,6 +3043,7 @@
 .jr.airstarfinance.net
 .jrclick.jd.com
 .js.newrutor.eu.org
+.jscdnweb.pages.dev
 .jspassport.ssl.qhimg.com
 .jsqmt.qq.com
 .juggler.services.disqus.com
@@ -3151,6 +3166,7 @@
 .mads.amazon.com
 .magsrv.com
 .mail-ads.google.com
+.mail-cytanet.pages.dev
 .mailmunch.s3.amazonaws.com
 .mapi.m.jd.com
 .mapp.qzone.qq.com
@@ -3191,6 +3207,7 @@
 .metrics.accuweather.com
 .metrics.apple.com
 .metrics.bloomberg.com
+.metrics.elsevier.com
 .metrics.icloud.com
 .metrics.mzstatic.com
 .metrics.npr.org
@@ -3269,6 +3286,7 @@
 .msg.iqiyi.com
 .msg.youku.com
 .msite.baidu.com
+.mslfgl434.pages.dev
 .msmetrics.ws.sonos.com
 .msoftdl.360.cn
 .mssdk.bytedance.com
@@ -3602,6 +3620,7 @@
 .retcode.taobao.com
 .reveal.clearbit.com
 .review.gdtimg.com
+.rg-3tn.pages.dev
 .rh.qq.com
 .rich.qq.com
 .richmedia.video.qq.com
@@ -3743,6 +3762,7 @@
 .smetrics.accuweather.com
 .smetrics.afpjobs.amazon.com
 .smetrics.digicert.com
+.smetrics.elsevier.com
 .smetrics.flex.amazon.co.jp
 .smetrics.flex.amazon.com
 .smetrics.marketing.meethue.com
@@ -4056,6 +4076,7 @@
 .umini.shujupie.com
 .umsns.com
 .un-acs.youku.com
+.undersite.pages.dev
 .unibotscdn.b-cdn.net
 .unidesk.alicdn.com
 .union.360.cn
@@ -4101,6 +4122,7 @@
 .vcs.zijieapi.com
 .vd.contents.prod.eu.s3.amazonaws.com
 .vd.emp.prd.s3.amazonaws.com
+.vebo-vast.pages.dev
 .vegslb.com
 .vhotwsh.video.qq.com
 .vibeaconstr.onezapp.com
@@ -4171,6 +4193,7 @@
 .wisepush.video.baidu.com
 .wkclick.baidu.com
 .wkctj.baidu.com
+.wklwyt.springer.com
 .wl.hd.sohu.com
 .wlog.kuaishou.com
 .wm.baidu.com
@@ -4189,6 +4212,7 @@
 .www.addtoany.com
 .www.visualwebsiteoptimizer.com
 .www5.oss-cn-hangzhou.aliyuncs.com
+.www7.springer.com
 .wxaintpcos.wxqcloud.qq.com.cn
 .wxs.qq.com
 .wxsnsad.tc.qq.com
@@ -4233,6 +4257,7 @@
 .yule.sohu.com
 .yun-hl.3g.qq.com
 .yybx.oss-cn-hangzhou.aliyuncs.com
+.zeus-nevo.pages.dev
 .zhanzhang.baidu.com
 .zhihu-web-analytics.zhihu.com
 .zhishituanyuanji.cdn.bcebos.com
@@ -4485,6 +4510,7 @@ r.dmp.sina.cn
 r.dmp.sina.com.cn
 r.sg.sec.miui.com
 rc-topic-api.bz.mgtv.com
+render-web.11222.cn
 report.qqweb.qq.com
 report.yumobi.cn
 resolver.mi.xiaomi.com
