--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-06-06 22:42:40
-# Total rules: 4578
+# Generated from relevant_rules_wildcard_aware.txt on 2025-06-07 08:34:47
+# Total rules: 4583
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -453,7 +453,6 @@
 .applog.zijieapi.com
 .applogios.uc.cn
 .appsad.cn
-.appsflyersdk.com
 .appsupport.qq.com
 .appversion.115.com
 .apsrgeo.amap.com
@@ -770,6 +769,7 @@
 .contentpass.net
 .contentrecommend-out.mobile.sina.cn
 .contributions.guardianapis.com
+.conversions.appsflyersdk.com
 .cookielawblog.wordpress.com
 .coordinator.cm.bloomberg.com
 .copilot-telemetry.githubusercontent.com
@@ -2300,6 +2300,7 @@
 .dlp4luwpus5kr.cloudfront.net
 .dlrioxg1637dk.cloudfront.net
 .dls-account.di.atlas.samsung.com
+.dlsdk.appsflyersdk.com
 .dlsw.baidu.com
 .dlsw.br.baidu.com
 .dlswbr.baidu.com
@@ -2504,6 +2505,7 @@
 .dyj8pbcnat4xv.cloudfront.net
 .dykwdhfiuha6l.cloudfront.net
 .dymwsh1c2kslr.cloudfront.net
+.dynamic-report-api.appsflyersdk.com
 .dyodrs1kxvg6o.cloudfront.net
 .dyrfxuvraq0fk.cloudfront.net
 .dysuze6ljcmcr.cloudfront.net
@@ -2690,6 +2692,7 @@
 .gator.volces.com
 .gb.corp.163.com
 .gc.sec.miui.com
+.gcdsdk.appsflyersdk.com
 .gdpr-settings.s3.amazonaws.com
 .gdt.qq.com
 .gecko.snssdk.com
@@ -2983,6 +2986,7 @@
 .imtt.qq.com
 .in.applicationinsights.azure.com
 .in.yimg.com
+.inapps.appsflyersdk.com
 .indianetouristvisacoin.wordpress.com
 .inf.miui.com
 .infinityid.condenastdigital.com
@@ -3062,6 +3066,7 @@
 .l.qq.com
 .l.youku.com
 .labadena.com
+.launches.appsflyersdk.com
 .lb.gtimg.com
 .lc-push.zhihu.com
 .leak.360.cn
@@ -3502,6 +3507,7 @@
 .preview.msn.com
 .privacy-center.org
 .privacy-policy.truste.com
+.privacy-sandbox.appsflyersdk.com
 .prodregistryv2.org
 .projecta-common-1258344701.file.myqcloud.com
 .projectagora.s3.amazonaws.com
@@ -3602,6 +3608,7 @@
 .redrain-aglnsy.bytedance.com
 .refer.wordpress.com
 .referrer.disqus.com
+.register.appsflyersdk.com
 .reke.at.sohu.com
 .rel.msn.com
 .release.baidu.com
@@ -4122,7 +4129,6 @@
 .vcs.zijieapi.com
 .vd.contents.prod.eu.s3.amazonaws.com
 .vd.emp.prd.s3.amazonaws.com
-.vebo-vast.pages.dev
 .vegslb.com
 .vhotwsh.video.qq.com
 .vibeaconstr.onezapp.com
@@ -4264,7 +4270,6 @@
 .zhstatic.zhihu.com
 .zmetrics.msn.com
 .znsv.baidu.com
-.zoosnet.net
 .zqtk.net
 .zt.jd.com
 .ztd.dds.microsoft.com
