--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-06-08 09:28:42
-# Total rules: 4580
+# Generated from relevant_rules_wildcard_aware.txt on 2025-06-08 13:20:44
+# Total rules: 4587
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -53,6 +53,7 @@
 .a8clk.macpaw.com
 .aan.amazon.com
 .ablink.staging-e.klarna.com
+.abroad-ad.kingsoft-office-service.com
 .abtest-ch.snssdk.com
 .abtest.alibaba.com
 .ac.dun.163.com
@@ -740,6 +741,7 @@
 .cmshow.gtimg.cn
 .cmweb.ilike.alibaba.com
 .cn-vmc-images.alicdn.com
+.cnzz.com
 .cnzz.mmstat.com
 .coins.arstechnica.com
 .collect.alipay.com
@@ -3468,6 +3470,7 @@
 .pingtas.qq.com
 .pingtcss.qq.com
 .pipe.aria.microsoft.com
+.pipi.cn
 .pix.spot.im
 .pixel-config.reddit.com
 .pixel-static.spotify.com
@@ -3587,6 +3590,7 @@
 .rads.msn.com
 .rads.stackoverflow.com
 .rapid-glade-cde8.asoumare042024.workers.dev
+.rating6.kingsoft-office-service.com
 .raw.vidyard.com
 .rcgi.video.qq.com
 .rcm-images.amazon.com
@@ -3650,6 +3654,7 @@
 .rs2.qq.com
 .rtbasia.com
 .rubiconproject.com
+.rum-metrics.bunny.net
 .rum.condenastdigital.com
 .s-adashx.ut.uc.cn
 .s.360.cn
@@ -4289,6 +4294,7 @@ ad.alimama.com
 ad.bn.netease.com
 ad.gamebox.360.cn
 ad.iot.360.cn
+ad.maoyan.com
 adapi.shouji.360.cn
 adashx.ut.ele.me
 adavideo.baidu.com
@@ -4573,6 +4579,7 @@ vv84.bj.bcebos.com
 w.l.qq.com
 wmlog.meituan.com
 wpcdn1.herokuapp.com
+www-analytics.ripe.net
 xadx.file.market.xiaomi.com
 xiazai.xiaomi.com
 xitong.xiaomi.com
